<resources>
    <string name="app_name">RTKGPS+</string>
    <string name="app_url">http://github.com/eltorio/RtkGps</string>
    <string name="app_version_label">Version</string>
    <string name="app_legacy_info_label">Legacy info</string>
    <string name="about_licenses">Legacy info</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_activity_label">About</string>
    <string name="crash_toast_text">Ooooops! I crashed, but a report has been sent to my developer to help fix the issue!</string>
	<string name="title_activity_input_stream_settings">Input stream settings</string>
	<string name="title_activity_output_stream_settings">Output stream settings</string>
	<string name="title_activity_log_stream_settings">Log stream settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_start_service">Start service</string>
    <string name="menu_stop_service">Stop service</string>
    <string name="menu_dropbox">Dropbox</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_select_solution_format">Select solution format</string>
    <string name="menu_select_gtime_format">Select time format</string>
    <string name="menu_about">About</string>
    <string name="menu_map_mode">Map mode</string>
    <string name="menu_map_mode_osm">OpenStreetMap</string>
    <string name="menu_map_mode_bing_aerial">Bing Aerial</string>
    <string name="menu_map_mode_bing_road">Bing Road</string>
    <string name="menu_map_mode_geoportail_map">Geoportail map</string>
    <string name="menu_map_mode_geoportail_cadastral">Geoportail cadastral</string>
    <string name="menu_map_mode_geoportail_orthoimages">Geoportail aerial</string>
    <string name="local_service_started">Local service started</string>
    <string name="local_service_stopped">Local service stopped</string>
    <string name="local_service_label">RtkGps</string>
    <string name="sky_plot_north">N</string>
    <string name="sky_plot_west">W</string>
    <string name="sky_plot_south">S</string>
    <string name="sky_plot_east">E</string>
    <string name="sky_plot_num_of_sat"># of Sat: %d</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navdraw_category_server">Server</string>
    <string name="navdraw_category_streams">Streams</string>
    <string name="navdraw_category_settings">Settings</string>
    <string name="navdraw_item_server_switch">Server</string>
    <string name="navdraw_ntripcaster_server_switch">NTRIP Caster</string>
    <string name="navdraw_item_status">Status</string>
    <string name="navdraw_item_map">Map</string>
	<string name="navdraw_item_input_streams">Input streams</string>
    <string name="navdraw_item_output_streams">Output streams</string>
    <string name="navdraw_item_log_streams">Log streams</string>
    <string name="navdraw_item_processing_options">Processing options</string>
    <string name="navdraw_item_solution_options">Solution options</string>
    <string name="navdraw_item_ntripcaster_options">Caster options</string>
    <string-array name="rtk_server_receiver">
        <item>Rover</item>
        <item>Base</item>
        <item>Emphem</item>
    </string-array>
    <string name="gtime_format_gps">GPS</string>
    <string name="gtime_format_utc">UTC</string>
    <string name="gtime_format_local">Local</string>
    <string name="gtime_format_gps_tow">GPS TOW</string>
    <string name="solution_view_solution">Solution:</string>
    <string name="solution_view_geoid">Geoid:</string>
    <string name="solution_view_crs">CRS:</string>
    <string name="solution_view_age_text_format">Age: %1$.1fs\nRatio: %2$.1f\n#Of sat: %3$d</string>
    <string name="solution_view_format_wgs84">Lat/Lon/Height</string>
    <string name="solution_view_format_wgs84_float">Lat/Lon/Height — Float</string>
    <string name="solution_view_format_utm">UTM E/N/H/Zone</string>
    <string name="solution_view_format_proj4_lambertIIextended">Lambert II extended E/N/H</string>
    <string name="solution_view_format_proj4_lambert93">RGF93 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc43">RGF93 CC43 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc44">RGF93 CC44 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc45">RGF93 CC45 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc46">RGF93 CC46 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc47">RGF93 CC47 E/N/H</string>
    <string name="procopt_positioning_mode_title">Positioning mode</string>
    <string name="procopt_positioning_mode_dialog_title">Select positioning mode</string>
    <string name="procopt_number_of_freqencies_title">Frequencies</string>
    <string name="procopt_number_of_freqencies_dialog_title">Select number of frequencies</string>
    <string name="procopt_navigation_system_title">Navigation system</string>
    <string name="procopt_navigation_system_dialog_title">Select navigation system</string>
    <string name="procopt_elevation_mask_title">Elevation mask (°)</string>
    <string name="procopt_elevation_mask_dialog_title">Select elevation mask (°)</string>
    <string name="procopt_snr_mask_title">SNR mask (dbHz)</string>
    <string name="procopt_snr_mask_dialog_title">Select SNR mask (dbHz)</string>
    <string name="procopt_ambiguity_resolution_title">GPS Integer ambiguity resolution</string>
    <string name="procopt_ambiguity_resolution_dialog_title">GPS Integer ambiguity resolution</string>
    <string name="procopt_ambiguity_glonass_resolution_title">Glonass Integer ambiguity resolution</string>
    <string name="procopt_ambiguity_resolution_sub_preference_title">Integer ambiguity resolution settings</string>
    <string name="procopt_min_ratio_to_fix_ambiguity_title">Min ratio to fix ambiguity</string>
    <string name="procopt_min_lock_to_fix_ambiguity_title">Min lock to fix ambiguity</string>
    <string name="procopt_min_elevation_to_fix_ambiguity_title">Min elevation to fix ambiguity</string>
    <string name="procopt_rec_dynamics_title">Rec dynamics</string>
    <string name="procopt_rec_dynamics_summary">Estimate receiver velocity and acceleration</string>
    <string name="procopt_rec_earth_tides_correction_title">Earth tides correction</string>
    <string name="procopt_ionosphere_correction_title">Ionosphere correction</string>
    <string name="procopt_ionosphere_correction_dialog_title">Select ionosphere correction method</string>
    <string name="procopt_troposphere_correction_title">Troposphere correction</string>
    <string name="procopt_troposphere_correction_dialog_title">Select troposphere correction method</string>
    <string name="procopt_satellite_ephemeris_clock_title">Satellite Ephemeris/Clock</string>
    <string name="procopt_satellite_ephemeris_clock_dialog_title">Satellite Ephemeris/Clock</string>
    <string name="procopt_sat_antenna_pcv_title">Satellite PCV</string>
    <string name="procopt_sat_antenna_pcv_summary">Use satellite antenna phase center variation</string>
    <string name="procopt_receiver_antenna_pcv_title">Receiver PCV</string>
    <string name="procopt_receiver_antenna_pcv_summary">Use receiver antenna phase center variation</string>
    <string name="procopt_phase_windup_correction_title">Phase windup correction</string>
    <string name="procopt_phase_windup_correction_summary">Apply phase windup correction</string>
    <string name="procopt_exclude_eclipsing_sat_measurements_title">Reject eclipsing satellite</string>
    <string name="procopt_exclude_eclipsing_sat_measurements_summary">Exclude measurements of eclipsing satellite</string>
    <string name="procopt_raim_fde_title">RAIM FDE</string>
    <string name="procopt_raim_fde_summary">Enable RAIM failure detection and exclusion</string>
    <string name="procopt_processing_cycle_title">Processing cycle (s)</string>
	<string name="procopt_processing_cycle_summary">Set the cycle for processing mock positions and GPX trace</string>
    <string name="solopt_output_header_title">Output header</string>
    <string name="solopt_output_header_summary">Set whether the header is output or not</string>
    <string name="solopt_output_mocklocation_title">Output GPS mock locations</string>
    <string name="solopt_output_mocklocation_summary">Set if solution is sent to other applications like the internal GPS</string>
    <string name="solopt_time_format_title">Time format</string>
    <string name="solopt_time_format_dialog_title">Set the format of time</string>
    <string name="solopt_lat_lon_format_title">Latitude/Longitude Format</string>
    <string name="solopt_lat_lon_format_dialog_title">Latitude/Longitude Format</string>
    <string name="solopt_field_separator_title">Field Separator</string>
    <string name="solopt_height_title">Height</string>
    <string name="solopt_height_dialog_title">Set the type of height</string>
    <string name="solopt_geoid_model_title">Geoid Model</string>
    <string name="solopt_geoid_model_dialog_title">Select geoid Model</string>
    <string name="solopt_nmea_interval_rmc_gga_title">Nmea interval (s) for RMC/GGA messages</string>
    <string name="solopt_nmea_interval_gsa_gsv_title">Nmea interval (s) for GSA/GSV messages</string>
    <string name="solopt_output_solution_status_title">Output solution status</string>
    <string name="solopt_output_solution_status_dialog_title">Set the output level of the solution status file</string>
    <string name="solopt_debug_trace_title">Debug trace</string>
    <string name="solopt_debug_trace_dialog_title">Set the output level of debug trace file</string>
    <string name="solopt_output_customproj4_title">User defined Proj4 projection</string>
    <string name="solopt_output_customproj4_summary">This is for power users. Must be a correct proj4 string</string>
    <string name="solopt_output_customproj4_default">+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs</string>
    <string name="solopt_output_testmode_title">Enable test mode</string>
    <string name="solopt_output_testmode_summary">If this is enabled and Rover/Base/Correction are off, it runs in a special test mode with positions coming from internal GPS. Obviously no algorithm from RTKLIB can work</string>
	<string name="streams_settings_type_title">Type</string>
    <string name="streams_settings_format_title">Format</string>
    <string name="streams_settings_button_title">Stream settings&#8230;</string>
    <string name="streams_settings_commands_at_startup_shutdown_title">Commands at startup/shutdown&#8230;</string>
    <string name="streams_settings_rover_position_title">Rover position</string>
    <string name="input_streams_settings_enable_rover_title">Enable rover</string>
    <string name="input_streams_settings_receiver_option_title">Receiver option</string>
    <string name="input_streams_settings_transmit_gpgga_to_base_title">Transmit GPGGA to Base Station</string>
    <string name="input_streams_settings_transmit_gpgga_lat_title">Latitude</string>
    <string name="input_streams_settings_transmit_gpgga_lon_title">Longitude</string>
    <string name="input_streams_setting_antenna_title">Antenna</string>
    <string name="input_streams_setting_antenna_summary">Antenna official IGS name (for phase center variation)</string>
    <string name="ntrip_client_host_title">Host</string>
    <string name="ntrip_client_port_title">Port</string>
    <string name="ntrip_client_mountpoint_title">NTRIP Mountpoint</string>
    <string name="ntrip_client_user_title">NTRIP user</string>
    <string name="ntrip_client_password_title">NTRIP password</string>
    <string name="usb_device_baudrate_title">Baudrate</string>
	<string name="usb_device_data_bits_title">Data bits</string>
	<string name="usb_device_parity_title">Parity</string>
	<string name="usb_device_stop_bits_title">Stop bits</string>
</resources>