<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <SwitchPreference
        android:key="enable"
        android:title="@string/input_streams_settings_enable_rover_title" />
    
    <gpsplus.rtkgps.settings.widget.StreamTypePreference
        android:key="type"
        android:title="@string/streams_settings_type_title"
        android:dependency="enable" />
    
	<Preference
        android:key="stream_settings_button"
        android:dependency="enable"
        android:title="@string/streams_settings_button_title"
        android:persistent="false" />
    
    <gpsplus.rtkgps.settings.widget.StreamFormatPreference
        android:key="format"
        android:title="@string/streams_settings_format_title"
        android:dependency="enable" />

    <ListPreference android:key="antenna"
            android:title="@string/input_streams_setting_antenna_title" 
            android:dialogTitle="@string/input_streams_setting_antenna_summary"
            android:defaultValue="" 
            android:dependency="enable"/>
    
	<Preference
        android:key="commands_at_startup_shutdown_button"
        android:dependency="enable"
        android:title="@string/streams_settings_commands_at_startup_shutdown_title"
        android:persistent="false" />

	<EditTextPreference
        android:key="receiver_option"
        android:title="@string/input_streams_settings_receiver_option_title"
        android:dependency="enable" />
		
	<Preference
        android:key="station_position_button"
        android:dependency="enable"
        android:title="@string/streams_settings_rover_position_title"
        android:persistent="false" />	
	
	
</PreferenceScreen>